--- a/package.json
+++ b/package.json
@@ -13,11 +13,14 @@
     "@testing-library/jest-dom": "^5.17.0",
     "@testing-library/react": "^13.4.0",
     "@testing-library/user-event": "^13.5.0",
-    "axios": "^1.7.8",
+    "axios": "^1.7.9",
     "react": "^18.3.1",
     "react-dom": "^18.3.1",
+    "react-facebook-login": "^4.1.1",
+    "react-loader-spinner": "^6.1.6",
     "react-router-dom": "^7.1.0",
     "react-scripts": "5.0.1",
+    "react-toastify": "^11.0.2",
     "styled-components": "^6.1.13",
     "web-vitals": "^2.1.4"
   },
