--- a/.env
+++ b/.env
@@ -1,1 +1,4 @@
-REACT_APP_BASE_URL=https://best-of-ncr-backend.onrender.com
+# REACT_APP_BASE_URL=https://best-of-ncr-backend.onrender.com
+
+
+REACT_APP_BASE_URL=http://localhost:9000
